apps/traefik-dashboard/manifests/20-middleware-basicauth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: kube-system
spec:
  basicAuth:
    secret: traefik-dashboard-auth
    realm: "Traefik Dashboard"
